--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 </div>
 
 <label for="date">Date</label>
-<input type="text" id="date" placeholder="Select a date" required>
+<input type="text" id="date" placeholder="Select a date" required readonly>
 
 <label for="time">Time</label>
 <select id="time" required>
@@ -77,7 +77,7 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 <input type="email" id="cancelEmail" required>
 
 <label for="cancelDate">Date</label>
-<input type="text" id="cancelDate" placeholder="Select a date" required>
+<input type="text" id="cancelDate" placeholder="Select a date" required readonly>
 
 <label for="cancelTime">Time</label>
 <select id="cancelTime" required>
@@ -92,29 +92,84 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec"; // Replace with your Apps Script URL
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec";
+const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
   const lengthField = document.getElementById("lengthField");
-  if (this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
+  if(this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
   else lengthField.classList.add("hidden");
 });
 
-// Allowed September dates
-const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
-
-// Fetch booked dates
-async function getBookedDates() {
+// Initialize booking datepicker
+let bookingPicker;
+async function initBookingDatepicker() {
   try {
-    const res = await fetch(WEB_APP_URL + "?action=fetch");
-    const data = await res.json();
-    const booked = data.bookings || [];
-    return booked.map(b => b.date);
-  } catch {
-    return [];
+    const response = await fetch(WEB_APP_URL + "?action=fetch");
+    const data = await response.json();
+    const bookedDates = (data.bookings || []).map(b => b.date);
+    const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
+
+    if(bookingPicker) bookingPicker.destroy();
+
+    bookingPicker = flatpickr("#date", {
+      dateFormat:"Y-m-d",
+      enable: availableDates,
+      defaultDate: null,
+      minDate: "today",
+      disableMobile: true
+    });
+  } catch(e) {
+    console.error(e);
   }
 }
+initBookingDatepicker();
 
-// Initialize booking calendar
-async function initBooking
+// Initialize cancel datepicker (all allowed dates)
+flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates, disableMobile:true });
+
+// Booking form
+document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const bookingData = {
+    action:"book",
+    name: document.getElementById("name").value,
+    phone: document.getElementById("phone").value,
+    email: document.getElementById("email").value,
+    service: document.getElementById("service").value,
+    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
+    date: document.getElementById("date").value,
+    time: "12:00 PM"
+  };
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const data = await res.json();
+    alert(data.message);
+    if(data.status === "success") await initBookingDatepicker();
+  } catch {
+    alert("Error booking appointment");
+  }
+});
+
+// Cancel form
+document.getElementById("cancelForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const cancelData = {
+    action:"cancel",
+    email: document.getElementById("cancelEmail").value,
+    date: document.getElementById("cancelDate").value,
+    time: "12:00 PM"
+  };
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(cancelData) });
+    const data = await res.json();
+    alert(data.message);
+    if(data.status === "success") await initBookingDatepicker();
+  } catch {
+    alert("Error cancelling appointment");
+  }
+});
+</script>
+</body>
+</html>
